--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ git:
 go: [1.13.x, 1.14.x, 1.15.x]
 script:
   - go test -race -v -coverprofile=coverage.txt -covermode=atomic ./...
-  - go test -run=XXX -bench=. -loglevel=debug ./...
+  - go test -run=^$ -bench=. -loglevel=debug ./...
 services:
   - redis-server
 after_success:
-  - bash ./.travis/benchcmp.sh
+  - travis_wait 60 bash ./.travis/benchstat.sh
   - bash <(curl -s https://codecov.io/bash)
