--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        go-version: [1.14.x, 1.15.x, 1.16.x, 1.17.x]
+        go-version: [1.14.x, 1.15.x, 1.16.x, 1.17.x, 1.18.x]
     runs-on: ${{ matrix.os }}
     services:
       redis:
